# semsi

./: .gitignore  3_files_similarity_matrix - Sheet1.csv  README.md  pyproject.toml
colab_manet_gdrive/: 02_Use_Similarity_Matrix.ipynb
example_data/: 3_files_similarity_matrix.xlsx  contents.txt  info.md
notebooks/: Semsi_Workflow.ipynb
semsi/: __init__.py  cli.py  data.py  embedding.py  similarity.py  ui_app.py
semsi_jupyter/: 01_Make_Similarity_Matrix.ipynb  MANET_word2vec.ipynb  Manet_colab_topicmodeling.ipynb  info.mb
tests/: test_data.py  test_similarity.py
